--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ pillow==12.0.0
 platformdirs==4.5.0
 prompt_toolkit==3.0.52
 protobuf==6.31.1
-psutil==7.1.3
+psutil==7.1.1
 ptyprocess==0.7.0
 PuLP==3.3.0
 pure_eval==0.2.3
@@ -45,3 +45,4 @@ traitlets==5.14.3
 typing_extensions==4.15.0
 tzdata==2025.2
 wcwidth==0.2.14
+seaborn==0.13.2
